Bug 326090. Expose <hr> as ROLE_SEPARATOR. Patch by Ming (Mike) Gao. r=aaronlev, sr=roc